Added per-server threadpools, tokenized urls